--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
  , "description": "Extract information about FIXME- and TODO-style comments from git repositories. (Powers http://fixme.ninja)"
  , "repository" : "ELLIOTTCABLE/fixme-ninja"
 
+ , "main"       : "./Library/fixme-ninja.js"
+
  , "scripts": {
       "build"                  : "./Scripts/build.sh"
     , "prepublish"             : "./Scripts/build.sh"
@@ -41,16 +43,17 @@
    }
 
  , "dependencies": {
-      "nodegit"             : "^0.11.1"
+      "nodegit"                : "^0.11.1"
 
-    , "core-js"             : "^2.1.0"
-    , "lodash"              : "^4.0.0"
-    , "debug"               : "^2.2.0"
+    , "core-js"                : "^2.1.0"
+    , "lodash"                 : "^4.0.0"
+    , "debug"                  : "^2.2.0"
 
-    , "babel-cli"                       : "^6.5.1"
-    , "babel-runtime"                   : "^6.5.0"
-    , "babel-preset-es2015"             : "^6.5.0"
-    , "babel-preset-stage-2"            : "^6.5.0"
-    , "babel-plugin-transform-runtime"  : "^6.5.2"
+    , "babel-cli"              : "^6.5.1"
+    , "babel-runtime"          : "^6.5.0"
+    , "babel-preset-es2015"    : "^6.5.0"
+    , "babel-preset-stage-2"   : "^6.5.0"
+    , "babel-plugin-transform-runtime"
+                               : "^6.5.2"
    }
 }
