--- a/package.json
+++ b/package.json
@@ -46,12 +46,16 @@
  , "dependencies": {
       "nodegit"                : "^0.11.1"
 
-    , "core-js"                : "^2.1.0"
     , "lodash"                 : "^4.0.0"
     , "debug"                  : "^2.2.0"
 
-    , "babel-cli"              : "^6.5.1"
+    , "promise-done"           : "^1.0.1"
+    , "promisify-event"        : "^1.0.0"
+   }
+ , "devDependencies": {
+      "babel-cli"              : "^6.5.1"
     , "babel-runtime"          : "^6.5.0"
+    , "babel-register"         : "^6.5.2"
     , "babel-preset-es2015"    : "^6.5.0"
     , "babel-preset-stage-2"   : "^6.5.0"
     , "babel-plugin-transform-runtime"
