--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "dirs": {
          "source"              : "Source"
        , "products"            : "Library"
-       , "test"                : "Tests"
+       , "tests"               : "Tests"
       }
 
     , "mocha": {
@@ -40,8 +40,9 @@
 
  , "babel": {
       "presets"                : ["es2015", "stage-2"]
-    , "plugins"                : ["transform-runtime"]
+    , "plugins"                : ["transform-runtime", "transform-flow-comments"]
    }
+
 
  , "dependencies": {
       "nodegit"                : "^0.11.1"
@@ -52,13 +53,21 @@
     , "promise-done"           : "^1.0.1"
     , "promisify-event"        : "^1.0.0"
    }
+
  , "devDependencies": {
-      "babel-cli"              : "^6.5.1"
+      "flow-bin"               : "^0.21.0"
+    , "babel-cli"              : "^6.5.1"
     , "babel-runtime"          : "^6.5.0"
     , "babel-register"         : "^6.5.2"
     , "babel-preset-es2015"    : "^6.5.0"
     , "babel-preset-stage-2"   : "^6.5.0"
     , "babel-plugin-transform-runtime"
                                : "^6.5.2"
+    , "babel-plugin-transform-flow-comments"
+                               : "^6.5.0"
+
+    , "mocha"                  : "^2.4.5"
+    , "chai"                   : "^3.5.0"
+    , "chai-as-promised"       : "^5.2.0"
    }
 }
