--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
          "source"              : "Source"
        , "products"            : "Library"
        , "tests"               : "Tests"
+       , "working"             : "Tests/Work"
       }
 
     , "mocha": {
@@ -47,8 +48,9 @@
  , "dependencies": {
       "nodegit"                : "^0.11.1"
 
-    , "lodash"                 : "^4.0.0"
     , "debug"                  : "^2.2.0"
+    , "lodash"                 : "^4.0.0"
+    , "bluebird"               : "^3.3.1"
 
     , "promise-done"           : "^1.0.1"
     , "promisify-event"        : "^1.0.0"
@@ -69,5 +71,6 @@
     , "mocha"                  : "^2.4.5"
     , "chai"                   : "^3.5.0"
     , "chai-as-promised"       : "^5.2.0"
+    , "chokidar-cli"           : "^1.2.0"
    }
 }
