--- a/package.json
+++ b/package.json
@@ -71,6 +71,12 @@
     , "mocha"                  : "^2.4.5"
     , "chai"                   : "^3.5.0"
     , "chai-as-promised"       : "^5.2.0"
+    , "sinon"                  : "^1.17.3"
+    , "sinon-chai"             : "^2.8.0"
+    , "sinon-as-promised"      : "^4.0.0"
+
     , "chokidar-cli"           : "^1.2.0"
+
+    , "promise-exec"           : "^0.1.0"
    }
 }
