--- a/.flowconfig
+++ b/.flowconfig
@@ -1,8 +1,9 @@
 [ignore]
-.*/node_modules/babel-.*
+   .*/node_modules/babel-.*
 
 [include]
 
 [libs]
 
 [options]
+   suppress_comment=\\(.\\|\n\\)*\\FIXTYPE
