--- a/package.json
+++ b/package.json
@@ -47,13 +47,11 @@
 
  , "dependencies": {
       "nodegit"                : "^0.11.1"
+    , "nodegit-kit"            : "^0.7.2"
 
     , "debug"                  : "^2.2.0"
     , "lodash"                 : "^4.0.0"
     , "bluebird"               : "^3.3.1"
-
-    , "promise-done"           : "^1.0.1"
-    , "promisify-event"        : "^1.0.0"
    }
 
  , "devDependencies": {
